Clean-up some warnings and IDE comments in the Util class
Signed-off-by: Jakub Scholz <www@scholzj.com>